Scope span detail endpoint by organization
